--- a/style.css
+++ b/style.css
@@ -84,8 +84,18 @@ body {
   border: none;
 }
 
-.button5 {
-  background-color: var(--color5);
-  color: var(--color2);
-  border: none;
+.buttontext {
+  display: flex;
+  font-size: 0.7rem;
+  font-weight: 600;
+  padding-top: 0.3rem;
+}
+
+.satisfaccion1 {
+  padding-left: 1.8rem;
+}
+
+.satisfaccion2 {
+  text-align: right;
+  padding-right: 1.8rem;
 }
