--- a/style.css
+++ b/style.css
@@ -81,21 +81,38 @@ body {
   cursor: pointer;
   background-color: var(--color5);
   color: var(--color2);
-  border: none;
+  box-shadow: 0px 15px 10px -12px var(--color3);
+  transition: all 0.5s ease;
 }
 
 .buttontext {
+  width: 80%;
   display: flex;
-  font-size: 0.7rem;
-  font-weight: 600;
+  justify-content: space-between;
+  font-family: var(--font-family1);
+  font-size: 0.5rem;
+  font-weight: 800;
   padding-top: 0.3rem;
 }
 
+span {
+  display: block;
+}
+
 .satisfaccion1 {
-  padding-left: 1.8rem;
+  padding-left: 0.1rem;
 }
 
 .satisfaccion2 {
   text-align: right;
-  padding-right: 1.8rem;
+  padding-right: 0.1rem;
+}
+
+.cardfigma__tyc {
+  width: 80%;
+  font-family: var(--font-family1);
+  font-size: 0.7rem;
+  font-weight: bold;
+  align-items: flex-start;
+  padding-top: 1rem;
 }
