--- a/style.css
+++ b/style.css
@@ -53,6 +53,15 @@ body {
   height: 25px;
   background-color: var(--color2);
   color: var(--color7);
+  cursor: pointer;
+}
+
+.cardfigma__x:hover {
+  background-color: var(--color5);
+}
+
+.cardfigma__x:active {
+  transform: scale(1.1);
 }
 
 .cardfigma__text {
@@ -61,10 +70,11 @@ body {
   font-weight: 900;
   text-align: left;
   width: 80%;
+  padding-top: 0.8rem;
 }
 
 .cardfigma__divbutton {
-  margin-top: 1.5rem;
+  margin-top: 1.8rem;
 }
 
 .cardfigma__button {
@@ -83,6 +93,10 @@ body {
   color: var(--color2);
   box-shadow: 0px 15px 10px -12px var(--color3);
   transition: all 0.5s ease;
+}
+
+.cardfigma__button:active {
+  transform: scale(0.5);
 }
 
 .buttontext {
@@ -109,10 +123,43 @@ span {
 }
 
 .cardfigma__tyc {
+  display: flex;
   width: 80%;
+  height: 2rem;
   font-family: var(--font-family1);
   font-size: 0.7rem;
   font-weight: bold;
-  align-items: flex-start;
-  padding-top: 1rem;
+  align-items: center;
+  padding: 1.5rem 0 1.5rem 0;
+  border-bottom: 2px solid var(--color1);
+  cursor: pointer;
+}
+
+.cardfigma_input {
+  width: 1.3rem;
+  height: 1.3rem;
+  margin-right: 0.3rem;
+  cursor: pointer;
+}
+
+.cardfigma__buttonend {
+  margin: 1.3rem 0 1rem 0;
+  font-family: var(--font-family1);
+  font-weight: bold;
+  font-size: 0.7rem;
+  border: 2px solid var(--color1);
+  background-color: var(--color2);
+  width: 80%;
+  height: 3rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cardfigma__buttonend:hover {
+  box-shadow: 0px 15px 20px -12px var(--color3);
+  transition: all 0.5s ease;
+  background-color: var(--color5);
+  color: var(--color2);
+  border: var(--color5);
+  transform: scale(0.9);
 }
